# duckdb-eurostat-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.windsurf/memories/: common-issues.md  project-overview.md  technical-decisions.md
.windsurf/workflows/: add-new-feature.md  create-flexible-mcp-server.md  deploy-to-github.md  setup-and-test.md
docs/: ARCHITECTURE.md  LLM_PROVIDERS.md
src/duckdb_eurostat_mcp/: __init__.py  duckdb_manager.py  llm_providers.py  query_translator.py  server.py
tests/: __init__.py  conftest.py  test_duckdb_manager.py  test_llm_providers.py  test_query_translator.py  test_server.py
